@@ -17,10 +17,9 @@ import org.springframework.data.mongodb.core.geo.GeoJsonPoint;
 import org.springframework.stereotype.Service;
 
 import javax.management.Query;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -70,6 +69,14 @@ public class AttractionGeoService {
         return attractionGeoRepository.findByGeohashStartingWith(geohashPrefix);
     }
 
+    private AttractionGetRequest mapAttractionToRequest(AttractionDocument geolocation){
+        return AttractionGetRequest.builder()
+                .id(geolocation.getId())
+                .latitude(geolocation.getLatitude())
+                .longitude(geolocation.getLongitude())
+                .build();
+    }
+
     public List<AttractionGetRequest> findNearbyAttractions(double latitude, double longitude) {
         double radiusKm = 10.0;
 
@@ -77,27 +84,45 @@ public class AttractionGeoService {
         Distance distance = new Distance(radiusKm, Metrics.KILOMETERS);
 
         List<AttractionDocument> documents = attractionGeoRepository.findByLocationNear(point, distance);
-
         return documents.stream()
-                .map(doc -> {
-                    Optional<Attraction> optionalAttraction = attractionRepository.findById(doc.getId());
-                    if (optionalAttraction.isEmpty()) return null;
+                .map(this::mapAttractionToRequest)
+                .collect(Collectors.toList()); //returns only the geolocation data
+//        return documents.stream()
+//                .map(doc -> {
+//                    Optional<Attraction> optionalAttraction = attractionRepository.findById(doc.getId());
+//                    if (optionalAttraction.isEmpty()) return null;
+//
+//                    Attraction attraction = optionalAttraction.get();
+//
+//                    return AttractionGetRequest.builder()
+//                            .id(attraction.getId())
+//                            .name(attraction.getName())
+//                            .description(attraction.getDescription())
+//                            .entryFee(attraction.getEntryFee())
+//                            .audioFilePath(attraction.getAudioFilePath())
+//                            .lastUpdate(attraction.getLastUpdate())
+//                            .latitude(doc.getLocation().getY())
+//                            .longitude(doc.getLocation().getX())
+//                            .build();
+//                })
+//                .filter(Objects::nonNull)
+//                .toList();
+    }
 
-                    Attraction attraction = optionalAttraction.get();
+    public List<AttractionGetRequest> mapLocationToAttraction(List<AttractionGetRequest> attractions){
+        List<AttractionDocument> geoLocationAttractions = getAllLocations();
+        Map<UUID, AttractionDocument> geoMap = geoLocationAttractions.stream()
+                .collect(Collectors.toMap(AttractionDocument::getId, Function.identity()));
 
-                    return AttractionGetRequest.builder()
-                            .id(attraction.getId())
-                            .name(attraction.getName())
-                            .description(attraction.getDescription())
-                            .entryFee(attraction.getEntryFee())
-                            .audioFilePath(attraction.getAudioFilePath())
-                            .lastUpdate(attraction.getLastUpdate())
-                            .latitude(doc.getLocation().getY())
-                            .longitude(doc.getLocation().getX())
-                            .build();
+        return attractions.stream()
+                .peek(attraction -> {
+                    AttractionDocument geo = geoMap.get(attraction.getId());
+                    if (geo != null) {
+                        attraction.setLatitude(geo.getLatitude());
+                        attraction.setLongitude(geo.getLongitude());
+                    }
                 })
-                .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
